--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ archives_base_name=handocopter
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.97.2+1.20.4
+modmenu_version=9.2.0
+cloth_config_version=13.0.121
